<?xml version="1.0" encoding="utf-8"?>
<com.boroscsaba.commonlibrary.views.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#00ffffff"
    android:paddingTop="8dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp"
    android:elevation="10dp"
    app:borderType="rounded|solid|shadow"
    app:borderColor="#bbbbbb"
    app:backgroundColor="#ffffff">

    <LinearLayout
        android:id="@+id/titleBarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bmiChartContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:text="@string/bmi_label"
            android:layout_marginStart="24dp"
            android:textColor="#555555"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/quickEditButton"
            android:contentDescription="@string/edit"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="14dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_edit_black_48dp"
            android:tint="#777777" />

        <ImageView
            android:id="@+id/discardChangesButton"
            android:visibility="gone"
            android:contentDescription="@string/save"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:src="@drawable/ic_close_black_48dp"
            android:tint="#666666" />

        <ImageView
            android:id="@+id/quickEditSaveButton"
            android:visibility="gone"
            android:contentDescription="@string/save"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_check_white_48dp"
            android:tint="#666666" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bmiChartContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/titleBarContainer"
        app:layout_constraintBottom_toTopOf="@+id/bmiChartEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.boroscsaba.bodymeasurementtracker.viewItems.BmiChart
            android:id="@+id/bmiChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bmiChartEdit"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/bmiChartContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:text="@string/weight_label"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#666666"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/weightEdit"
                android:textAlignment="textEnd"
                android:layout_width="80dp"
                android:textSize="24sp"
                android:layout_height="wrap_content"
                android:inputType="number|numberDecimal" />

            <TextView
                android:id="@+id/weightUnit"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#999999" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp"
            android:gravity="center_horizontal">

            <TextView
                android:text="@string/height_label"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#666666"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/heightEdit"
                android:textAlignment="textEnd"
                android:layout_width="80dp"
                android:textSize="24sp"
                android:layout_height="wrap_content"
                android:inputType="number|numberDecimal" />

            <TextView
                android:id="@+id/heightUnit"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#999999" />

        </LinearLayout>

    </LinearLayout>

</com.boroscsaba.commonlibrary.views.ConstraintLayout>