<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newParameterContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/addFirstParameterLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="23dp"
            android:gravity="center"
            android:text="@string/add_new_parameter"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/parameterNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="56dp"
            android:gravity="center"
            android:text="@string/tutorial_parameter_name_label"
            android:textAlignment="center"
            android:textColor="#666666"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addFirstParameterLabel" />

        <ImageView
            android:id="@+id/parameterNameArrow"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_alignTop="@id/addFirstParameterLabel"
            android:layout_marginTop="20dp"
            android:rotation="170"
            android:scaleType="fitXY"
            android:scaleX="1"
            android:scaleY="-1"
            android:src="@drawable/tutorial_arrow"
            android:tint="#777777"
            tools:ignore="ContentDescription"
            app:layout_constraintEnd_toStartOf="@+id/parameterNameLabel"
            app:layout_constraintTop_toTopOf="@+id/parameterNameLabel" />

        <com.boroscsaba.commonlibrary.views.ConstraintLayout
            android:id="@+id/innerContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:background="#ffffff"
            android:elevation="5dp"
            android:orientation="vertical"
            android:paddingTop="8dp"
            app:borderColor="#555555"
            app:borderType="dashed"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/parameterNameArrow"
            app:layout_constraintVertical_bias="0.0">

            <com.boroscsaba.bodymeasurementtracker.view.ParameterIconView
                android:id="@+id/newParameterIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="6dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/newParameterNameLayout"
                app:layout_constraintTop_toTopOf="@+id/newParameterNameLayout"
                app:layout_constraintBottom_toBottomOf="@+id/newParameterNameLayout"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newParameterNameLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                android:labelFor="@+id/newParameterNameLayout"
                app:passwordToggleDrawable="@null"
                android:theme="@style/AppTheme"
                app:layout_constraintStart_toEndOf="@+id/newParameterIcon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <EditText
                    android:id="@+id/newParameterNameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="19sp"
                    android:maxLines="1"
                    android:textColor="#555555"
                    android:hint="@string/parameter_name_example"
                    android:inputType="textAutoCorrect|textCapWords"
                    android:labelFor="@id/newParameterNameLayout"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/newParameterValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_weight="1"
                android:hint="@string/parameter_value_example"
                android:inputType="number|numberDecimal"
                android:textAlignment="textEnd"
                android:textSize="32sp"
                android:layout_marginStart="72dp"
                android:gravity="end"
                app:layout_constraintEnd_toStartOf="@+id/newParameterUnitEdit"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newParameterNameLayout"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/newParameterUnitEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="72dp"
                android:layout_marginTop="14dp"
                android:focusable="false"
                android:inputType="none"
                app:layout_constraintStart_toEndOf="@+id/newParameterValue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/newParameterValue"
                app:layout_constraintBottom_toBottomOf="@+id/newParameterValue"
                app:layout_constraintHorizontal_chainStyle="packed"/>

            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#eeeeee"
                android:layout_marginTop="56dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newParameterUnitEdit" />

            <ImageView
                android:id="@+id/newParameterSaveButton"
                android:contentDescription="@string/save"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="8dp"
                android:layout_marginEnd="32dp"
                android:src="@drawable/ic_check_white_48dp"
                android:tint="#666666"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separator"/>

            <TextView
                android:id="@+id/currentValueLabel"
                android:textColor="#666666"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/current_value_tutorial_label"
                android:textAlignment="center"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@+id/currentValueArrow"
                app:layout_constraintStart_toEndOf="@+id/currentValueArrow"/>

            <ImageView
                android:id="@+id/currentValueArrow"
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:layout_marginBottom="38dp"
                android:layout_marginEnd="8dp"
                android:scaleY="1"
                android:scaleX="-1"
                android:rotation="0"
                android:scaleType="fitXY"
                android:src="@drawable/tutorial_arrow"
                tools:ignore="ContentDescription"
                android:tint="#777777"
                app:layout_constraintBottom_toBottomOf="@+id/newParameterValue"
                app:layout_constraintStart_toStartOf="@+id/newParameterValue"
                app:layout_constraintEnd_toEndOf="@+id/newParameterUnitEdit"/>

        </com.boroscsaba.commonlibrary.views.ConstraintLayout>

        <ImageView
            android:id="@+id/saveArrow"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_marginEnd="38dp"
            android:layout_marginTop="-22dp"
            android:scaleY="-1"
            android:scaleX="1"
            android:rotation="0"
            android:scaleType="fitXY"
            android:src="@drawable/tutorial_arrow"
            tools:ignore="ContentDescription"
            android:tint="#777777"
            app:layout_constraintTop_toBottomOf="@+id/innerContainer"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:textColor="#666666"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/save"
            android:textAlignment="center"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/innerContainer"
            app:layout_constraintEnd_toStartOf="@+id/saveArrow"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>